--- a/product-details.html
+++ b/product-details.html
@@ -107,10 +107,10 @@
 									Please transfer the payment in the correct amount to match the sum of your total ticket reservations to the following bank account.  </p>
 
 <p> Account Details 
-Account No. : 71266257 
-Account  Name: BUILDING ECONOMICS STUDENTS SOCIETY 
-Bank : Bank of Ceylon
-Branch : Katubedda Campus </p>
+Account No. : 100160452008
+Account  Name: Quantity Surveying Alumni Association
+Bank : Sampath Bank
+Branch : City Office </p>
 <p> Make sure to get a screenshot or save the receipt of the transfer. </p><p>Then click on the following button to fill in your details and upload the transfer receipt. </p><p> <button> 
 										<a href="https://forms.gle/hsbpq985FHe5WLvN8" target="_blank">Click</a></button>
 								</p>
