--- a/product-details.html
+++ b/product-details.html
@@ -75,21 +75,21 @@
 									<h2 id="ticket-price">Rs.&nbsp;6000</h2>
 									<button><a href="https://payhere.lk/pay/oddb77039" target="_blank">Purchase</a></button>
 								</div>
-								<p style="color: red; opacity: 1.2">&nbsp;&nbsp;Out of Tickets</p>
+								<p style="color: red; opacity: 1.2">&nbsp;&nbsp; </p>
 							</div>
 							<div class="grid-container">
 								<div class="grid-item" style=" pointer-events: none; opacity: 0.4;">
 									<h2 id="ticket-price">Rs.&nbsp;4000</h2>
 									<button><a href= "https://payhere.lk/pay/o44be2183" target="_blank">Purchase</a></button>
 								</div>
-								<p style="color: red; opacity: 1.2">&nbsp;&nbsp;></p>
+								<p style="color: red; opacity: 1.2">&nbsp;&nbsp; </p>
 							</div>
 							<div class="grid-container">
 								<div class="grid-item" style=" pointer-events: none; opacity: 0.4;">
 									<h2 id="ticket-price">Rs.&nbsp;2000</h2>
 									<button><a href="https://payhere.lk/pay/oa3060c84" target="_blank">Purchase</a></button>
 								</div>
-								<p style="color: red; opacity: 1.2">&nbsp;&nbsp;></p>
+								<p style="color: red; opacity: 1.2">&nbsp;&nbsp; </p>
 							</div>
 						</div>
 					</div>
