--- a/terms.html
+++ b/terms.html
@@ -63,7 +63,7 @@
 
 					<h4>Returns and Exchanges</h4>
 
-					<p>We do not accept returns.</p>
+					<p>We accept returns within 2 days from the date of purchase. To be eligible for a return, your item must be purchased 4 days before the event (Purchase on or before the 4th of August). </p>
 
 					<h4>Refunds</h4>
 
