--- a/product-details.html
+++ b/product-details.html
@@ -73,52 +73,35 @@
 							<div class="grid-container">
 								<div class="grid-item" style=" pointer-events: none; opacity: 0.4;" >
 									<h2 id="ticket-price">Rs.&nbsp;6000</h2>
-									<button><a href="https://payhere.lk/pay/oddb77039" target="_blank">Purchase</a></button>
+									<button><a href="https://payhere.lk/pay/o52efe457" target="_blank">Purchase</a></button>
 								</div>
 								<p style="color: red; opacity: 1.2">&nbsp;&nbsp; </p>
 							</div>
 							<div class="grid-container">
 								<div class="grid-item" style=" pointer-events: none; opacity: 0.4;">
 									<h2 id="ticket-price">Rs.&nbsp;4000</h2>
-									<button><a href= "https://payhere.lk/pay/o44be2183" target="_blank">Purchase</a></button>
+									<button><a href= "https://payhere.lk/pay/oc250f9c6" target="_blank">Purchase</a></button>
+								</div>
+								<p style="color: red; opacity: 1.2">&nbsp;&nbsp; </p>
+							</div>
+							<div class="grid-container">
+								<div class="grid-item" style=" pointer-events: none; opacity: 0.4;">
+									<h2 id="ticket-price">Rs.&nbsp;3000</h2>
+									<button><a href= "https://payhere.lk/pay/ob557c950" target="_blank">Purchase</a></button>
 								</div>
 								<p style="color: red; opacity: 1.2">&nbsp;&nbsp; </p>
 							</div>
 							<div class="grid-container">
 								<div class="grid-item" style=" pointer-events: none; opacity: 0.4;">
 									<h2 id="ticket-price">Rs.&nbsp;2000</h2>
-									<button><a href="https://payhere.lk/pay/oa3060c84" target="_blank">Purchase</a></button>
+									<button><a href="https://payhere.lk/pay/o83cae733" target="_blank">Purchase</a></button>
 								</div>
 								<p style="color: red; opacity: 1.2">&nbsp;&nbsp; </p>
 							</div>
 						</div>
 					</div>
 
-					<h2>2. Get your ticket - Pay through bank transfer</h2>
-					<div class="row">
-						<div class="col-md-5">
-							<img src="images/hpurchase.webp" class="img-responsive" alt="">
-						</div>
-						<div class="col-md-7">
-							<div id="ff-compose"></div>
-						<div class="col-md-7">
-							<div>
-								<p>
-									Please transfer the payment in the correct amount to match the sum of your total ticket reservations to the following bank account.  </p>
-
-<p> Account Details 
-Account No. : 100160452008
-Account  Name: Quantity Surveying Alumni Association
-Bank : Sampath Bank
-Branch : City Office </p>
-<p> Make sure to get a screenshot or save the receipt of the transfer. </p><p>Then click on the following button to fill in your details and upload the transfer receipt. </p><p> <button> 
-										<a href="https://forms.gle/hsbpq985FHe5WLvN8" target="_blank">Click</a></button>
-								</p>
-
-							</div>
-						</div>
-							</div>
-
+				
 					<!-- <h2>2. Get your ticket - Pay through payment portal <p style="color: red;">(The portal will be
 							available soon)</p>
 					</h2>
@@ -222,7 +205,7 @@ Branch : City Office </p>
 		<footer id="footer">
 			<div class="inner row justify-content-between align-items-center">
 				<ul class="copyright">
-					<li>Copyright © 2024 BESS UOM</li>
+					<li>Copyright © 2024 QSAA UOM</li>
 					<!-- <li> Powered by <a target="_blank" href="https://www.facebook.com/coordinate.labs/">Coordinate
 							Labs</a></li> -->
 				</ul>
