--- a/index.html
+++ b/index.html
@@ -120,6 +120,22 @@
 					<header class="major">
 						<h3>Class C</h3>
 
+						<p><strong>Rs.3000</strong></p>
+
+						<p></p>
+
+						<div class="major-actions">
+							<a href="product-details.html" class="button small next">Purchase ticket</a>
+						</div>
+					</header>
+				</article>
+				<article>
+					<span class="image">
+						<img src="images/hticket.webp" alt="" />
+					</span>
+					<header class="major">
+						<h3>Class D</h3>
+
 						<p><strong>Rs. 2000</strong></p>
 
 						<p></p>
