--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
 					<article>
 						<div class="artist-item">
 							<span class="image">
-								<img src="images/hartist1new.webp" alt="" />
+								<img src="images/hartist_2.webp" alt="" />
 							</span>
 							<p class="text">Sanka Dineth</p>
 						</div>
@@ -191,9 +191,17 @@
 						<article>
 						<div class="artist-item">
 							<span class="image">
-								<img src="images/hartist4new.webp" alt="" />
+								<img src="images/hartist_4.webp" alt="" />
 							</span>
-							<p class="text">Nalaka Sajee with Grade 14</p>
+							<p class="text">Nalaka Sajee</p>
+						</div>
+					</article>
+					<article>
+						<div class="artist-item">
+							<span class="image">
+								<img src="images/hartist_5.webp" alt="" />
+							</span>
+							<p class="text">Grade 14</p>
 						</div>
 					</article>
 				</span>
