--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
 					<article>
 						<div class="artist-item">
 							<span class="image">
-								<img src="images/hartist2new.webp" alt="" />
+								<img src="images/hartist_3.webp" alt="" />
 							</span>
 							<p class="text">Visharada Shirley Waijayantha</p>
 						</div>
