--- a/index.html
+++ b/index.html
@@ -219,19 +219,19 @@
 
 				<article>
 					<span class="image">
-						<img src="images/hgallery1.webp" alt="" />
+						<img src="images/hgallery_1.webp" alt="" />
 					</span>
 
 				</article>
 				<article>
 					<span class="image">
-						<img src="images/hgallery2jpeg.webp" alt="" />
+						<img src="images/hgallery_2.webp" alt="" />
 					</span>
 
 				</article>
 				<article>
 					<span class="image">
-						<img src="images/hgallery3jpeg.webp" alt="" />
+						<img src="images/hgallery_3.webp" alt="" />
 					</span>
 
 				</article>
