--- a/artists.html
+++ b/artists.html
@@ -66,17 +66,7 @@
 								<span class="image">
 									<img src="images/hartist_1.webp" alt="" />
 								</span>
-								<p>Nirosha Virajini is an award-winning
-									artist who is a vocalist, a musician,
-									and a music director with a career
-									spanning over 23 years. She is a
-									versatile singer who has sung songs in
-									several languages such as Sinhalese,
-									Tamil, Hindi, and Malayalam. She
-									was awarded the Best Female Vocalist
-									as a playback singer at the Presidential
-									Awards and Sarasaviya Awards in
-									2000, 2002, and 2016.</p>
+								<p>Nirosha Virajini is an award-winning artist who is a vocalist, a musician, and a music director and a music teacher with a career spanning over 25 years. She is a versatile singer who has sung songs in several languages such as Sinhalese, Tamil, Hindi, and Malayalam. She was awarded the Best Female Vocalist as a playback singer at the Presidential Awards and Sarasaviya Awards in 2000, 2002, and 2016.</p>
 							</div>
 						</div>
 
@@ -88,7 +78,9 @@
 								<span class="image">
 									<img src="images/hartist1new.webp" alt="" />
 								</span>
-								<p>Sanka Dineth De Silva is a Sri Lankan pop music singer-songwriter and composer. Sanka won the sixth place at the Sirasa Superstar Season 2 in 2008. As a result of popiularity he gained trough Superstar, he was selected to promotes several promenet brands in Sri Lanka including Lankabell, Elephant Cream Soda and Maliban Biscuits. for His debut album "Sankranthi" has been released in 2009.</p>
+								<p>Sanka Dineth De Silva is a Sri Lankan pop music singer-songwriter and composer. Sanka won the sixth place at the Sirasa Superstar Season 2 in 2008. As a result of popularity, he gained through Superstar, he was selected to promote several prominent brands in Sri Lanka including Lankabell, Elephant Cream Soda and Maliban Biscuits. 
+His debut album "Sankranthi" was released in 2009. From 2011 he started to spread his musical knowledge as a vocal lecturer in Sri Lanka Youth Maharagama where he uses his subject matter into practice. Sanka Dineth has been involved as a singer as well as music director thoroughly in commercials which were made by advertising agencies and TV, Radio medias.
+ He had also worked as an official musical director at the Commonwealth Youth Forum 2013 and also at the World Youth Conference 2014. Sanka has been awarded as the Best Music Director at the 37th OCIC Signis Film Awards 2012 for the music direction of the movie “Colour”. In 2013 he has been nominated for the most popular singer in Sri Lanka at SLIM peoples awards with Master Amaradewa.</p>
 							</div>
 						</div>
 
