--- a/artists.html
+++ b/artists.html
@@ -76,7 +76,7 @@
 							<p class="text">Sanka Dineth </p>
 							<div class="artist-item-row">
 								<span class="image">
-									<img src="images/hartist1new.webp" alt="" />
+									<img src="images/hartist_2.webp" alt="" />
 								</span>
 								<p>Sanka Dineth De Silva is a Sri Lankan pop music singer-songwriter and composer. Sanka won the sixth place at the Sirasa Superstar Season 2 in 2008. As a result of popularity, he gained through Superstar, he was selected to promote several prominent brands in Sri Lanka including Lankabell, Elephant Cream Soda and Maliban Biscuits. 
 His debut album "Sankranthi" was released in 2009. From 2011 he started to spread his musical knowledge as a vocal lecturer in Sri Lanka Youth Maharagama where he uses his subject matter into practice. Sanka Dineth has been involved as a singer as well as music director thoroughly in commercials which were made by advertising agencies and TV, Radio medias.
@@ -90,7 +90,7 @@ His debut album "Sankranthi" was released in 2009. From 2011 he started to sprea
 							<p class="text">Visharada Shirley Waijayantha </p>
 							<div class="artist-item-row">
 								<span class="image">
-									<img src="images/hartist2new.webp" alt="" />
+									<img src="images/hartist_3.webp" alt="" />
 								</span>
 								<p>Kalabhooshana Visharad Shirley Waijayantha Gunasinghe is a Sri Lankan singer, musician, music instructor and music teacher by profession. He is one of the founding members of Bellwood College of Music in Sri Lanka, Waijayantha has produced several leading singers to the Sri Lankan classical music industry in a career spanning more than four decades.
 								</p>
@@ -103,7 +103,7 @@ His debut album "Sankranthi" was released in 2009. From 2011 he started to sprea
 							<p class="text">Nalaka Sajee with Grade 14</p>
 							<div class="artist-item-row">
 								<span class="image">
-									<img src="images/hartist4new.webp" alt="" />
+									<img src="images/hartist_4.webp" alt="" />
 								</span>
 								<p>Nalaka who has mesmerised many a musical fan in Sri Lanka with his performances in public shows and live musical programmes on television is a music director, performer and graduate teacher. Sajee, a graduate in music from Sri Jayawardenapura University took a keen interest in music and dedicated himself mastering a number of musical instruments mainly string ones. He is a master performer in both classical and modern popular music.
 							</div>
