--- a/artists.html
+++ b/artists.html
@@ -35,7 +35,7 @@
 
 				<li> <a href="artists.html">Artists</a> </li>		
 
-				<li><a href="becon.html">QSAA</a></li>\
+				<li><a href="becon.html">QSAA</a></li>
 
 				<li><a href="event-mission.html">Event Mission</a></li>
 				
