--- a/product-details.html
+++ b/product-details.html
@@ -71,28 +71,28 @@
 						</div>
 						<div class="col-md-6">
 							<div class="grid-container">
-								<div class="grid-item" style=" pointer-events: none; opacity: 0.4;" >
+								<div class="grid-item" style=" opacity: 1;" >
 									<h2 id="ticket-price">Rs.&nbsp;6000</h2>
 									<button><a href="https://payhere.lk/pay/o52efe457" target="_blank">Purchase</a></button>
 								</div>
 								<p style="color: red; opacity: 1.2">&nbsp;&nbsp; </p>
 							</div>
 							<div class="grid-container">
-								<div class="grid-item" style=" pointer-events: none; opacity: 0.4;">
+								<div class="grid-item" style=" opacity: 0.4;">
 									<h2 id="ticket-price">Rs.&nbsp;4000</h2>
 									<button><a href= "https://payhere.lk/pay/oc250f9c6" target="_blank">Purchase</a></button>
 								</div>
 								<p style="color: red; opacity: 1.2">&nbsp;&nbsp; </p>
 							</div>
 							<div class="grid-container">
-								<div class="grid-item" style=" pointer-events: none; opacity: 0.4;">
+								<div class="grid-item" style=" opacity: 0.4;">
 									<h2 id="ticket-price">Rs.&nbsp;3000</h2>
 									<button><a href= "https://payhere.lk/pay/ob557c950" target="_blank">Purchase</a></button>
 								</div>
 								<p style="color: red; opacity: 1.2">&nbsp;&nbsp; </p>
 							</div>
 							<div class="grid-container">
-								<div class="grid-item" style=" pointer-events: none; opacity: 0.4;">
+								<div class="grid-item" style=" opacity: 0.4;">
 									<h2 id="ticket-price">Rs.&nbsp;2000</h2>
 									<button><a href="https://payhere.lk/pay/o83cae733" target="_blank">Purchase</a></button>
 								</div>
