--- a/tickets.html
+++ b/tickets.html
@@ -85,6 +85,22 @@
 						</div>
 					</header>
 				</article>
+								<article>
+					<span class="image">
+						<img src="images/hticket.webp" alt="" />
+					</span>
+					<header class="major">
+						<h3>Class B</h3>
+
+						<p><strong>Rs. 3000</strong></p>
+
+						<p></p>
+
+						<div class="major-actions">
+							<a href="product-details.html" class="button small next">Purchase ticket</a>
+						</div>
+					</header>
+				</article>
 				<article>
 					<span class="image">
 						<img src="images/hticket.webp" alt="" />
