--- a/product-details.html
+++ b/product-details.html
@@ -36,7 +36,7 @@
 
 				<li> <a href="artists.html">Artists</a> </li>
 
-				<li><a href="becon.html">QSAA</a></li>
+				<li><a href="QSAA.html">QSAA</a></li>
 
 				<li><a href="event-mission.html">Event Mission</a></li>
 				
