--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 			<section>
 				<div class="inner">
 					<header class="major">
-						<h2>About us</h2>
+						<h2>About the Event</h2>
 					</header>
 					<p>Harmony is a classical musical event organised by the Quantity Surveying Alumni Association that will be held at the Musaeus College Auditorium. The funds raised by this musical event will be used to support the Department of Building Economics of the University of Moratuwa, Sri Lanka. These funds aim to bring the Quantity Surveying degree programme of the department to the forefront in the international arena in terms of quality, recognition, achievements and welfare and well-being of the university students and the alumni residing and practising all over the world. The
 					</p>
