--- a/tickets.html
+++ b/tickets.html
@@ -65,7 +65,7 @@
 						<p></p>
 
 						<div class="major-actions">
-							<a href="product-details.html" class="button small next">Purchase ticket</a>
+							<a href="https://payhere.lk/pay/oc250f9c6" class="button small next">Purchase ticket</a>
 						</div>
 					</header>
 				</article>
@@ -81,7 +81,7 @@
 						<p></p>
 
 						<div class="major-actions">
-							<a href="product-details.html" class="button small next">Purchase ticket</a>
+							<a href="https://payhere.lk/pay/oc250f9c6" class="button small next">Purchase ticket</a>
 						</div>
 					</header>
 				</article>
@@ -97,7 +97,7 @@
 						<p></p>
 
 						<div class="major-actions">
-							<a href="product-details.html" class="button small next">Purchase ticket</a>
+							<a href="https://payhere.lk/pay/oc250f9c6" class="button small next">Purchase ticket</a>
 						</div>
 					</header>
 				</article>
@@ -113,7 +113,7 @@
 						<p></p>
 
 						<div class="major-actions">
-							<a href="product-details.html" class="button small next">Purchase ticket</a>
+							<a href="https://payhere.lk/pay/o83cae733" class="button small next">Purchase ticket</a>
 						</div>
 					</header>
 				</article>
