--- a/tickets.html
+++ b/tickets.html
@@ -65,7 +65,7 @@
 						<p></p>
 
 						<div class="major-actions">
-							<a href="https://payhere.lk/pay/oc250f9c6" class="button small next">Purchase ticket</a>
+							<a href="https://payhere.lk/pay/o52efe457" class="button small next">Purchase ticket</a>
 						</div>
 					</header>
 				</article>
@@ -97,7 +97,7 @@
 						<p></p>
 
 						<div class="major-actions">
-							<a href="https://payhere.lk/pay/oc250f9c6" class="button small next">Purchase ticket</a>
+							<a href="https://payhere.lk/pay/ob557c950" class="button small next">Purchase ticket</a>
 						</div>
 					</header>
 				</article>
