Seating Plan.html

--- a/index.html
+++ b/index.html
@@ -147,7 +147,13 @@
 				</article>
 				
 			</section>
-
+			<!-- Seating Plan -->
+<section class="">
+	<header class="major">
+						<h2>Seating Plan</h2>
+					</header>
+	<span class="image main"><img src="images/Hcontactus.webp" alt="" /></span>
+	</section>
 			<!-- Artists -->
 			<section class="">
 				<div class="inner flex-row d-flex align-items-start">
