--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
 	<header class="major">
 						<h2>Seating Plan</h2>
 					</header>
-	<span class="image main"><img src="images/Hcontactus.webp" alt="" /></span>
+	<span class="image main"><img src="images/seatplan.webp" alt="" /></span>
 	</section>
 			<!-- Artists -->
 			<section class="">
