--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
 						<p></p>
 
 						<div class="major-actions">
-							<a href="product-details.html" class="button small next">Purchase ticket</a>
+							<a href="https://payhere.lk/pay/o52efe457" class="button small next">Purchase ticket</a>
 						</div>
 					</header>
 				</article>
@@ -109,7 +109,7 @@
 						<p></p>
 
 						<div class="major-actions">
-							<a href="product-details.html" class="button small next">Purchase ticket</a>
+							<a href="https://payhere.lk/pay/oc250f9c6" class="button small next">Purchase ticket</a>
 						</div>
 					</header>
 				</article>
@@ -125,7 +125,7 @@
 						<p></p>
 
 						<div class="major-actions">
-							<a href="product-details.html" class="button small next">Purchase ticket</a>
+							<a href="https://payhere.lk/pay/ob557c950" class="button small next">Purchase ticket</a>
 						</div>
 					</header>
 				</article>
@@ -141,7 +141,7 @@
 						<p></p>
 
 						<div class="major-actions">
-							<a href="product-details.html" class="button small next">Purchase ticket</a>
+							<a href="https://payhere.lk/pay/o83cae733" class="button small next">Purchase ticket</a>
 						</div>
 					</header>
 				</article>
