--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
 							<span class="image">
 								<img src="images/hartist_4.webp" alt="" />
 							</span>
-							<p class="text">Nalaka Sajee</p>
+							<p class="text">Wadya Visharada Nalaka Sajee</p>
 						</div>
 					</article>
 					<article>
