--- a/artists.html
+++ b/artists.html
@@ -100,7 +100,7 @@ His debut album "Sankranthi" was released in 2009. From 2011 he started to sprea
 					</article>
 					<article>
 						<div class="artist-item">
-							<p class="text">Nalaka Sajee with Grade 14</p>
+							<p class="text">Wadya Visharada Nalaka Sajee with Grade 14</p>
 							<div class="artist-item-row">
 								<span class="image">
 									<img src="images/hartist_4.webp" alt="" />
