--- a/QSAA.html
+++ b/QSAA.html
@@ -64,8 +64,23 @@
 					</p>
 					<p>Our primary aim is to support the University, especially the Department of Building Economics to bring its Quantity Surveying Degree Programme to the forefront in international arena in terms of quality, recognition and achievements. As a part of that, we discuss, share and enlighten new developments/ activities/ experiences and work towards enhancement of welfare and well being of alumni residing and practicing all over the world. In addition we assist the staff and students in various curricular and extracurricular activities.
 					</p>
-					
-				</div>
+					<h2>Executive Committee (2023/2024) </h2><p>
+	
+1	President - 		Mr. Ajith Hindakaraldeniya <br>
+2	Secretary -		Dr. Menaha Thayaparan   <br>
+3	Treasurer - 		Ms. Asanka Muhandiram  <br>
+4	Vice president - 	Mr. Nuwan Thilakarathne  <br>
+5	Assistant Secretary - 	Ms. Dasuni Kodituwakku  <br>
+6	Asst. Treasurer - 	Mr. Chandana Geeganage  <br>
+	<h2> Committee Members</h2>
+7	Committee Member 1 - Mr. Nishantha Heenkenda  <br>
+8	Committee Member 2 - Mr. P.N.Dilshan  <br>
+9	Committee Member 3 - Mr. Isuru Udana  <br>
+10	Committee Member 4 - Mr. Malinda Harischandra  <br>
+11	Committee Member 5 - Mr. Rajitha Disanayake  <br>
+12	Committee Member 6 - Mr. Dinuka Maduranga  <br>
+13	Immediate past president - Mr.Nilantha Keerthiratne <br>
+				</p></div>
 			</section>
 
 		</div>
