--- a/index.html
+++ b/index.html
@@ -148,10 +148,18 @@
 				
 			</section>
 			<!-- Seating Plan -->
+			
 <section class="">
 	<header class="major">
 					</header>
 	<span class="image main"><img src="images/seatplan.webp" alt="" /></span>
+	</section>
+			<!-- Sponsors -->
+			
+<section class="">
+	<header class="major">
+					</header>
+	<span class="image main"><img src="images/sponsors.webp" alt="" /></span>
 	</section>
 			<!-- Artists -->
 			<section class="">
