--- a/product-details.html
+++ b/product-details.html
@@ -37,6 +37,7 @@
 				<li> <a href="artists.html">Artists</a> </li>
 
 				<li><a href="QSAA.html">QSAA</a></li>
+				<li><a href="sponsors.html">Sponsors</a></li>
 
 				<li><a href="event-mission.html">Event Mission</a></li>
 				
