--- a/sponsors.html
+++ b/sponsors.html
@@ -55,7 +55,7 @@
 			<section id="one">
 				<div class="inner">
 					<header class="major">
-						<h1>Sponsors (QSAA)</h1>
+						<h1>Sponsors</h1>
 					</header>
 
 					<div class="container">
