--- a/event-mission.html
+++ b/event-mission.html
@@ -69,7 +69,7 @@
 		<footer id="footer">
 			<div class="inner row justify-content-between align-items-center">
 				<ul class="copyright">
-					<li>Copyright © 2024 QSAA</li>
+					<li>Copyright © 2024 <a target="_blank" href="https://www.concolabs.com/">Concolabs</a></li> 
 					<!-- <li> Powered by <a target="_blank" href="https://www.facebook.com/coordinate.labs/">Coordinate
 							Labs</a></li> -->
 				</ul>
