--- a/QSAA.html
+++ b/QSAA.html
@@ -89,8 +89,8 @@
 		<!-- Footer -->
 		<footer id="footer">
 			<div class="inner row justify-content-between align-items-center">
-				<ul>
-					<li>Copyright © 2024 <a target="_blank" href="https://www.concolabs.com/">Concolabs</a></li> 
+				<ul class="copyright">
+					<li> <b> Copyright © 2024 <a target="_blank" href="https://www.concolabs.com/">Concolabs</a></b></li> 
 					<!-- <li> Powered by <a target="_blank" href="https://www.facebook.com/coordinate.labs/">Coordinate
 							Labs</a></li> -->
 				</ul>
