--- a/artists.html
+++ b/artists.html
@@ -116,7 +116,7 @@ His debut album "Sankranthi" was released in 2009. From 2011 he started to sprea
 		<footer id="footer" style="margin-left: 25px;">
 			<div class="inner row justify-content-between align-items-center">
 				<ul class="copyright">
-					<li>Copyright © 2024 <a target="_blank" href="https://www.concolabs.com/">Concolabs</a></li> 
+				<li> <b> Copyright © 2024 <a target="_blank" href="https://www.concolabs.com/">Concolabs</a></b></li> 
 					<!-- <li> Powered by <a target="_blank" href="https://www.facebook.com/coordinate.labs/">Coordinate
 							Labs</a></li> -->
 				</ul>
