--- a/contact-us.html
+++ b/contact-us.html
@@ -109,7 +109,7 @@
 						<div class="contact-method">
 							<span class="icon alt fa-whatsapp"></span>
 							<h3>WhatsApp</h3>
-							<span>Ajith Hindakaraldeniya</span>
+							<span></span>
 							<br>
 							<span><a href="https://wa.me/94777653932" target="_blank">+94 777 653 932</a></span>
 						</div>
