--- a/index.html
+++ b/index.html
@@ -81,6 +81,18 @@
 			</section>
 
 			<!-- Tickets -->
+			<section>
+				<div class="inner">
+					<header class="major">
+						<h1>NOTICE</h1>
+					</header>
+					<div class="col-md-7">
+								<p>
+									 Once you have paid for the tickets, you will instantly receive an email to the email address you will provide on the payment portal. You can contact our members mentioned on the contact us page to collect your ticket. 
+								</p>
+
+							</div>
+				</section>
 			<section class="tiles">
 				<article>
 					<span class="image">
