--- a/tickets.html
+++ b/tickets.html
@@ -48,7 +48,7 @@
 <section id="one">
 				<div class="inner">
 					<header class="major">
-						<h1>NOTICE</h1>
+						<h1>Notice</h1>
 					</header>
 					<div class="col-md-7">
 								<p>
